Removed Server folder and fixed alignment issues in Feed page

--- a/client/src/components/Posts/posts.module.css
+++ b/client/src/components/Posts/posts.module.css
@@ -19,6 +19,7 @@
     flex-shrink: 0;
     border-radius: 16px;
 background: var(--gray-0210, #FFF);
+width: 100%;
     
 }
 
@@ -206,6 +207,8 @@ margin: 0;
     font-weight: 400;
     line-height: 14px; /* 140% */
     margin: 0;
+    display: grid;
+    place-content: center;
 }
 
 .commentInput{
